# Locust_AWS_EKS_Terraform

./: .env.deployment  .env.observability  .gitignore  AGENTS.md  AWS_SETUP.md  DEPLOYMENT_INSTRUCTIONS.md  MONITORING_DEPLOYMENT_SUMMARY.md  PROJECT_SUMMARY.txt  README.md  deploy.sh  destroy.sh  observability.sh  package-lock.json  pyproject.toml
.claude/agents/: devops-engineer.md  infrastructure-engineer.md  sre-observability.md
.github/: DEPLOYMENT_SUMMARY.txt  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MASTER_SETUP_GUIDE.md  MONITORING_QUICK_REFERENCE.md  QUICKSTART.md  QUICK_START.md  README.md  SECRETS_SETUP.md  WORKFLOW_ARCHITECTURE.md  setup-backend.sh
.github/workflows/: README.md  deploy-application.yml  deploy-complete.yml  deploy-infrastructure.yml  deploy-monitoring.yml  validate-workflows.sh
docker/: .dockerignore  Dockerfile  entrypoint.sh
docs/: DEPLOYMENT_SUMMARY.md  INDEX.md  MONITORING_BEST_PRACTICES.md  OBSERVABILITY_SETUP.md  PORTFORWARD_PERSISTENCE.md  QUICKSTART.md  README_SRE.md  SRE_DEPLOYMENT_GUIDE.md  TERRAFORM_GUIDE.md
kubernetes/: cluster-autoscaler-fixed.yaml  locust-stack.yaml
kubernetes/base/: configmap.yaml  locust-servicemonitor.yaml  master-deployment.yaml  master-internal-service.yaml  master-service.yaml  namespace.yaml  worker-deployment.yaml  worker-hpa.yaml
kubernetes/monitoring/: locust-servicemonitor.yaml
scripts/: common.sh
scripts/deploy/: 01-validate-prereqs.sh  (+4 more)
terraform/: main.tf  outputs.tf  terraform.tfvars  tfplan  variables.tf
tests/: __init__.py  locustfile.py
(+16 files in other folders)
