[project]
name = "locust-task-veeam"
version = "0.1.0"
description = "Task to be done and sent to Veeam before second technical interview"
authors = [
    {name = "Juan Estevez Castillo - jd.estevezcastillo@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "locust (>=2.42.2,<3.0.0)",
    "prometheus-client (>=0.17.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
